--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -4,7 +4,8 @@
 body {
   background-color: antiquewhite;
 
-  h1 {
+  h1,
+  h2 {
     color: #493200;
   }
 
@@ -21,5 +22,15 @@ body {
         color: #493200;
       }
     }
+  }
+}
+
+// pagina santo
+.my_saint {
+  font-size: 2rem;
+
+  span {
+    color: #690000;
+    text-decoration: underline;
   }
 }
